# sqlcompyre

./: .copier-answers.yml  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  SECURITY.md  docker-compose.yml  pixi.toml  pyproject.toml
.github/: release-drafter.yml
.github/actions/pytest/: action.yml
.github/workflows/: build.yml  chore.yml  ci.yml  scorecard.yml
docs/: Makefile  conf.py  index.rst
docs/_templates/: class_extended.rst
docs/_templates/autosummary/: base.rst  class.rst  function.rst  module.rst
docs/_templates/sites/: formatters.rst  writers.rst
docs/sites/: development.rst  getting_started.rst  installation.rst
docs/sites/example/: example.ipynb
sqlcompyre/: __init__.py  api.py
sqlcompyre/analysis/: __init__.py  query_inspection.py  schema_comparison.py  table_comparison.py
sqlcompyre/analysis/dialects/: __init__.py  _base.py  duckdb.py  mssql.py  sqlite.py
sqlcompyre/cli/: __main__.py
sqlcompyre/config/: __init__.py  model.py  validation.py
sqlcompyre/report/: __init__.py  report.py
sqlcompyre/report/formatters/: __init__.py  _base.py  _factory.py  terminal.py  text.py
sqlcompyre/report/schema/: __init__.py  schema.py
sqlcompyre/report/writers/: __init__.py  _base.py  _factory.py  file.py  markdown.py  stdout.py
sqlcompyre/results/: __init__.py  column_matches.py  counts.py  names.py  row_matches.py
tests/: conftest.py
tests/_shared/: __init__.py  dialects.py  schema.py  tables.py
tests/analysis/dialects/: test_mssql.py
tests/analysis/query_inspection/: conftest.py  test_column_stats.py  test_row_counts.py
tests/analysis/schema_comparison/: conftest.py  test_comparison.py  test_reports.py  test_table_comparison.py
tests/analysis/table_comparison/: conftest.py  test_by_column.py  test_column_matching.py  test_column_names.py  test_comparison.py  test_equal.py  test_ignore_columns.py  test_no_primary_key.py  test_null_values.py  test_only_primary_key.py  test_queries.py  test_report.py  test_row_counts.py  test_row_matches.py  test_string_collation.py  (+1 more)
tests/cli/: conftest.py  test_main_parquet.py  test_main_schemas.py  test_main_tables.py
tests/config/: test_config.py
tests/results/: test_counts.py
(+12 files in other folders)
